<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/button7"
        style="@style/PrimaryButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="2dp"
        android:background="@color/negro"
        android:text="@string/btn7" />

    <Button
        style="@style/PrimaryButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="2dp"
        android:background="@color/azul"
        android:text="@string/btn10" />

    <Button
        android:id="@+id/button8"
        style="@style/PrimaryButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="2dp"
        android:background="@color/verde"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/button9"
        style="@style/PrimaryButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="2dp"
        android:background="@color/rojo"
        android:text="@string/btn9" />

</LinearLayout>