<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <Button
        android:id="@+id/button11"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/rojo"
        android:text="@string/btn11"
        android:textColor="@color/blanco" />

    <Button
        android:id="@+id/button12"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn12"
        android:textColor="@color/blanco"
        android:background="@color/azul"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:text="@string/btn13"
        android:textColor="@color/blanco"
        android:background="@color/verde"/>

</RelativeLayout>